# forge-shell

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml
crates/forge-agent/: Cargo.toml
crates/forge-ast/: Cargo.toml
crates/forge-ast/src/: directive.rs  expr.rs  lib.rs  literal.rs  op.rs  pattern.rs  program.rs  stmt.rs  ty.rs
crates/forge-backend/: Cargo.toml
crates/forge-backend/src/: error.rs  lib.rs  lower.rs  plan.rs  unix.rs  windows.rs
crates/forge-builtins/: Cargo.toml
crates/forge-diagnostics/: Cargo.toml
crates/forge-diagnostics/src/: bag.rs  code.rs  convert.rs  diagnostic.rs  lib.rs  render.rs
crates/forge-exec/: Cargo.toml
crates/forge-exec/src/: context.rs  error.rs  executor.rs  lib.rs
crates/forge-exec/src/builtins/: cd.rs  cp.rs  echo.rs  find.rs  jq.rs  mod.rs  pwd.rs  tail.rs  utils.rs  yq.rs
crates/forge-exec/src/builtins/env/: cd.rs  env.rs  exit.rs  mod.rs  set.rs  unset.rs  which.rs
crates/forge-exec/src/builtins/fs/: df.rs  du.rs  find.rs  hash.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  rm.rs  rmdir.rs  stat.rs  touch.rs  tree.rs
crates/forge-exec/src/builtins/text/: cat.rs  diff.rs  filter.rs  grep.rs  head.rs  mod.rs  sort.rs  tail.rs  tq.rs  uniq.rs  wc.rs
crates/forge-hir/: Cargo.toml
crates/forge-hir/src/: error.rs  hir.rs  lib.rs  lower.rs
crates/forge-lexer/: Cargo.toml
crates/forge-lexer/src/: error.rs  lexer.rs  lib.rs
crates/forge-lower/: Cargo.toml
crates/forge-parser/: Cargo.toml
crates/forge-parser/src/: error.rs  lib.rs  parser.rs  tests.rs
crates/forge-parser/tests/: integration_test.rs
crates/forge-parser/tests/fixtures/: 01_hello_world.expected  01_hello_world.fgs  02_variables.expected  02_variables.fgs  03_arithmetic.expected  03_arithmetic.fgs  04_function_def.expected  04_function_def.fgs  05_function_call.expected  05_function_call.fgs  06_conditionals.expected  06_conditionals.fgs  07_while_loop.expected  07_while_loop.fgs  08_imports.expected  08_imports.fgs  09_directives.expected  09_directives.fgs  10_env_vars.expected  10_env_vars.fgs  11_pipes.expected  11_pipes.fgs  12_mutable_variables.expected  12_mutable_variables.fgs  13_shell_invocation.expected  13_shell_invocation.fgs  err_01_invalid_token.expected  err_01_invalid_token.fgs  err_02_directive_after_statement.expected  err_02_directive_after_statement.fgs
crates/forge-plugin/: Cargo.toml
crates/forge-repl/: Cargo.toml
crates/forge-repl/src/: lib.rs
crates/forge-types/: Cargo.toml
crates/forge-types/src/: lib.rs
docs/: ARCHITECTURE.md  rfc-000-template.md  rfc-001-forgescript-syntax.md  rfc-002-evaluation-pipeline.md  rfc-003-builtin-commands.md  rfc-004-path-and-env.md  rfc-005-plugin-system.md  rfc-006-job-control.md  rfc-007-ai-agent-layer.md  rfc-008-plan-caching-aot.md  rfc-009-plugin-registry.md  rfc-010-standard-library.md  rfc-011-forge-migrate.md  rfc-012-repl.md  rfc-013-shell-config.md  rfc-014-release-policy.md  rfc-015-telemetry.md  rfc-016-shebang-directives.md  rfc-017-shell-style-invocation.md  rfc-018-path-literals.md  rfc-019-command-substitution.md  rfc-020-glob-expansion.md
src/: main.rs
