[workspace]
resolver = "2"
members = [".", "crates/forge-types", "crates/forge-lexer", "crates/forge-ast", "crates/forge-parser", "crates/forge-hir", "crates/forge-backend", "crates/forge-exec", "crates/forge-repl", "crates/forge-plugin", "crates/forge-agent"]

[workspace.dependencies]
# Internal crates
forge-types    = { path = "crates/forge-types" }
forge-lexer    = { path = "crates/forge-lexer" }
forge-ast      = { path = "crates/forge-ast" }
forge-parser   = { path = "crates/forge-parser" }
forge-hir      = { path = "crates/forge-hir" }
forge-backend  = { path = "crates/forge-backend" }
forge-exec     = { path = "crates/forge-exec" }
forge-repl     = { path = "crates/forge-repl" }
forge-plugin   = { path = "crates/forge-plugin" }
forge-agent    = { path = "crates/forge-agent" }

# External crates
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[package]
name = "forge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
cargo-husky.workspace = true