[package]
name = "forge-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
forge-hir = { path  = "../forge-hir" }
forge-ast = { path = "../forge-ast" }
forge-types = { path = "../forge-types" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
