[package]
name = "forge-exec"
version = "0.1.0"
edition = "2024"

[dependencies]
forge-backend = { path = "../forge-backend" }
forge-ast     = { path = "../forge-ast" }
forge-types   = { path = "../forge-types" }
thiserror.workspace = true
tracing.workspace   = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace       = true
regex.workspace      = true
which    = "8.0.2"
walkdir  = "2"
md-5     = "0.10"
sha2     = "0.10"
sha1     = "0.10"
hex      = "0.4"
filetime = "0.2"
fs2      = "0.4"

[dev-dependencies]
tempfile.workspace = true
